# merkdas

./: .gitignore  LICENSE  README.md  include.mk
agda-coinductive-io/: std-lib.agda
agda/io/: builtin.agda  std-lib.agda
dependently-typed-programming-in-agda_norell-chapman/: Logic.agda  Makefile  README.md  Sort.agda  Tutorial.lagda.tex  Views.lagda.tex  tutorial.tex
environment-variables-parsing-for-free/: CHANGELOG.md  Main.hs  Makefile  README.md  cabal.project.local  environment-variables-parsing-for-free.cabal
go-concurrency/: 01_basic.go  02_random.go  03_routine.go  04_wait.go  05_channel.go  06_generators.go  07_services.go  08_multiplexing.go  09_wait.go  10_select.go  11_timeout.go  12_total-timeout.go  13_quit.go  14_quit-and-clean.go  README.md
haskell-with-types/: .gitlab-ci.yml  README.md
haskell-with-types/app/: Main.hs
haskell-with-types/misc/git/: pre-commit
haskell-with-types/src/: Nats.hs  Vec.hs
haskell/existentials/: Existential.hs  shell.nix
hello-agda/: .gitmodules  Xmodmap  agda  agda-stack  agda.vim  bibliography.bib  hello-agda.tex  hello-world.agda  hello-world.md  hello.agda-lib  installation.md  shake  unicode-keys.vim  unicode.lagda.tex
hello-agda/src/: Bool.lagda.md  Hello.agda  Naturals.lagda.tex  Test.agda  Vector.lagda.md
hello-lenses/: Conclusion.lhs  Lenses.lhs  Makefile  Plain.lhs  README.md  Records.lhs  bibliography.bib  hello-lenses-1.cpt  hello-lenses.cabal  hello-lenses.lhs  package.yaml
land-of-lisp/: README.md  TextAdventure.lisp
latex-literaturverzeichnis/: Makefile  README.md
learn-you-a-haskell/: README.md  RandomState.hs  TightropeWalker.hs
logo-with-latex/: Makefile  README.md  logo.tex
markdown/: notes.md
openbsd/: setup-haskell.md
openbsd-pledge-c/: Makefile  README.md
openbsd-pledge-go/: README.md
openbsd-pledge-haskell/: README.md
plfa/: Makefile  README.md  plfa.agda-lib  plfa.css  plfa.idv  plfa.lg  plfa.mk4  plfa.tex  plfa.tmp  plfa.xdv  plfa.xref  references.bib
plfa/part1/: Naturals.lagda.tex
real-world-haskell/ch11/: QC-basics.hs
real-world-haskell/ch24/: Chan.hs  Compressor.hs  Compressor2.hs  MVarExamples.hs
shake-latex/: Makefile  README.md  TODO  cabal.project  document.tex
shake-latex/make/: CHANGELOG.md  Make.hs  make.cabal
shake-latex/nested/: document.tex  nested.bib
typelevel-programming/: Make  Makefile  lambda.agda  logo.tex  type-level-programming.tex
typografie/: Makefile  README.md  typografie.tex
