cabal-version:      1.12
name:               hello-lenses
version:            0.1.0.0
description:
  Please see the README on GitLab at <https://gitlab.com/neosimsim/hello-lenses#readme>

homepage:           https://gitlab.com/neosimsim/hello-lenses
bug-reports:        https://gitlab.com/neosimsim/hello-lenses/issues
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh
copyright:          2019 © Alexander Ben Nasrallah
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type:     git
  location: https://gitlab.com/neosimsim/hello-lenses.git

executable plain
  main-is: Plain.lhs
  ghc-options: -Wall -Werror
  build-depends:
      base
  default-language: Haskell2010

executable records
  main-is: Records.lhs
  ghc-options: -Wall -Werror
  build-depends:
      base
  default-language: Haskell2010

executable lenses
  main-is: Lenses.lhs
  build-depends:
      base
    , lens
    , mtl
  default-language: Haskell2010


executable conclusion
  main-is: Conclusion.lhs
  build-depends:
      base
    , lens
    , mtl
  default-language: Haskell2010
